Add missing page placeholder.

--- a/sk.html
+++ b/sk.html
@@ -3709,6 +3709,10 @@ Q6&rarr;		DISPLAYK
 [Page header: "LMH GX7A 010"]
 
 <hr>
+[meta file_name=102726903-05-01-acc.pdf pdf_page=88 doc_page=86 type=equalities]
+[Page header: "LMH GX7A 011"]
+
+<hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=89 doc_page=87 type=equalities]
 [Page header: "LMH GX7A 012"]
 
