Another equalities table.

--- a/sk.html
+++ b/sk.html
@@ -142,7 +142,7 @@ POINTS= 4&times;MASBL+PICTURES
 PSPL= 200042
 PNAME= 17	**NAME OF PICTURE, 36 BITS
 PSIZE= 16	**SIZE OF THIS PICTURE
-PPART= 4		**PICTURE PART
+PPART= 4		**PICTURE PARTS
 PINS= 14		**INSTANCES OF THIS PICTURE
 PATAP= 12	**ATTACHERS OF THIS PICTURE
 PPARTM= 10	**MOVING PICTURE PARTS
@@ -207,6 +207,7 @@ VORD= 6		**ORDERING OF VARIABLES
 VA= LIST+PVAL
 VARLOC= 15	**LOCATION OF VARIABLES IN BLOCK
 VARIABLES= 1&times;SMASBL+LIST+1
+
 WORKS= 7&times;SMASBL+LIST+1
 WIBM= 200122
 WIBMN= 200123
@@ -371,7 +372,7 @@ POINTS= 4&times;MASBL+PICTURES
 PSPL= 200042
 PNAME= 17       **NAME OF PICTURE, 36 BITS
 PSIZE= 16       **SIZE OF THIS PICTURE
-PPART= 4        **PICTURE PART
+PPART= 4        **PICTURE PARTS
 PINS= 14        **INSTANCES OF THIS PICTURE
 PATAP= 12       **ATTACHERS OF THIS PICTURE
 PPARTM= 10      **MOVING PICTURE PARTS
@@ -425,7 +426,7 @@ TOPOS= 3&times;SMASBL+LIST+1
 
 VCON= 12        **CONSTRAINTS ON THIS VARIABLE
 VFLW= 10        **CONSTRAINTS WHICH THIS VARIABLE IS TO SATISFY
-VORD= 6 **ORDERING OF VARIABLES
+VORD= 6 		**ORDERING OF VARIABLES
 VA= LIST+PVAL
 VARLOC= 15      **LOCATION OF VARIABLES IN BLOCK
 VARIABLES= 1&times;SMASBL+LIST+1
@@ -2929,7 +2930,7 @@ POINTS= 4&times;MASBL+PICTURES
 PSPL= 200042
 PNAME= 17       **NAME OF PICTURE, 36 BITS
 PSIZE= 16       **SIZE OF THIS PICTURE
-PPART= 4        **PICTURE PART
+PPART= 4        **PICTURE PARTS
 PINS= 14        **INSTANCES OF THIS PICTURE
 PICCHANGE=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> CPNAME
 PSNEED=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200041
@@ -3696,29 +3697,330 @@ Q6&rarr;		DISPLAYK
 [meta file_name=102726903-05-01-acc.pdf pdf_page=84 doc_page=82 type=equalities]
 [Page header: "LMH GX7A 005"]
 
+45X= 43
+45X2= 44
+45RWD=<sup>1</sup>IOS <sub>4</sub><sub>5</sub> 30010	**LOW DENSITY ODD PARITY RWD
+45STM= 45RWD+1	**SENSE TAPE MARK
+45GFR= 45RWD+2	**GO FWD RD
+45SRM= 45RWD+3	**STOP RD MODE
+45GF= 45RWD+4	**GO FWD
+45GFW= 45RWD+5	**GO FWD WR
+45REV= 45RWD+6	**RD REV
+45WCS= 45RWD+7	**WR CHK STOP
+45LPSW=SKM <sub>1</sub><sub>.</sub><sub>1</sub> 45SWITCHES
+45RWSW=SKM <sub>1</sub><sub>.</sub><sub>2</sub> 45SWITCHES
+45START= 11000
+45LIST= 45B*	[syntax, delayed reference on rhs of assignment]
+45REVSW=SKM <sub>1</sub><sub>.</sub><sub>3</sub> 45SWITCHES
+45NUM= 377726
+45ZSW=SKM <sub>1</sub><sub>.</sub><sub>4</sub> 45SWITCHES
+45WA2= 45LAST INSTR
+45NSW=SKM <sub>1</sub><sub>.</sub><sub>5</sub> 45SWITCHES
+45LW= 66
+45GARBSW=SKM <sub>2</sub><sub>.</sub><sub>1</sub> 45SWITCHES
+[*45DELAYEX=]
+[*45DELAYK=]
+[*46LW= 4]
+
+ATATAP= 2       **ATTACHER THING
+[*ALLERRS&beta;=]
+
+BR= SIZE/2,,-SIZE
+BL=-SIZE/2,,-SIZE
+BADOV= 200100
+BWHOS= 4        **TO WHICH PICTURE BLOCK BELONGS
+BLOCK MARK= 6
+[*BMENTRY&beta;=]
+[*BMCHK=]
+[*BMERR=]
+
+CM&alpha;= 32
+CSQ=RFD #+1
+CM&beta;= 33
+CMANG= 200026
+CMAG= 200021
+COMP= 16        **CONSTRAINT COMPUTATION ROUTINE
+CHVAR= 20       **# CHANGABLE VARIABLES
+CIRCLES= 2&times;MASBL+PICTURES
+CSP= 10         **CIRCLE START POINT
+CEP= 12         **CIRCLE END POINT
+
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=85 doc_page=83 type=equalities]
 [Page header: "LMH GX7A 006"]
+
+CIRCEN= 14      **CIRCLE CENTER
+CVAL= 16        **CIRCLE ANGLE AND RADIUS
+CVTS= 6         **VARIABLE TO MOVE TO SATISFY THIS
+CURPICS= 15&times;SMASBL+LIST+1
+CONSTRAINTS= 4&times;SMASBL+LIST+1
+CONLET= 12      **CONSTRAINT LETTER DESIGNATOR
+[*CMP1=]
+
+DISPLAY = 5     **MASTER DISPLAY SUBROUTINE
+DEADS= 11&times;SMASBL+LIST+1
+DESIGS= 13*SMASBL+LIST+1
+
+[*ERRS= TX2ERR]
+[*EOTCHK=]
+[*EIALOOP&beta;=]
+[*EIAFND&beta;=]
+[*EIALD&beta;=]
+[*ERRTABLEK&beta;=]
+[*ERRTABLE&beta;=]
+[*ELOOPMSG1&beta;=]
+[*ELOOPMSG2&beta;=]
+[*ERR= ERRS]
+
+FREES= 5&times;SMASBL+LIST+1
+FREEDOMS= 6&times;SMASBL+LIST+1
+FIXEDS= 12&times;SMASBL+LIST+1
+[*FIOAMSG&beta;=]
+
+GETIT= 7        **MASTER FORMATION SUBROUTINE
+
+GETBLOCKER= 200053
+[*GORREXIT= 0]
+[*GOODBM=]
+
+HOWBIG= 6       **MASTER SCSZ COMPUTATION
+HOVS= 15&times;MASBL+PICTURES
+HOVP1= 10       **FIRST HORIZ OR VERT POINT
+HOVP2= 12       **SECOND HO1IZ OR VERT POINT    [sic, HORIZ]
+HOVCODE= 14     **HORIZ=1, VERTICAL=2, EITHER=0
+HOLDERS= 2&times;SMASBL+LIST+1
+
+INSTANCES= 6&times;MASBL+PICTURES
+IPCONS= 11&times;MASBL+PICTURES
+IBVERTS= 14&times;MASBL+PICTURES
+IPCOTP= 16      **INSTANCE-POINT CONSTRAINTS WITH THIS VIRGIN
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=86 doc_page=84 type=equalities]
 [Page header: "LMH GX7A 007"]
 
+IWHAT= 14       **WHAT PIC THIS IS INSTANCE OF
+ISIZE= 16       ** R
+IVAL= 20        **R COS &alpha;, R SIN &alpha;, X, Y
+IBVW= 10        **WHICH INSTANCE IS VERTICAL
+IBVCODE= 12     **INSTANCE TO BE VERTICAL, HORIZ, ETC
+IPCP= 10        **POINT IN INSTANCE-POINT CONSTRAINT
+IPCI= 12        **INSTANCE IN INSTANCE-POINT CONSTRAINT
+IPCV= 14        **VIRGIN POINT IN INSTANCE-POINT CONSTRAINT
+[*IOASCH&beta;=]
+[*IOASCHSW&beta;=]
+[*IOANOTSCH&beta;=]
+[*IOACONT&beta;=]
+
+KA= 15
+KIND= 13        **1=NOT IN PIC, 2=PPART, 3=PICBLKS
+
+LIST= 24000     **LIST STRUCTURE START
+LMSTART= 200022
+LMEND= 200024
+LMAG= 200020
+LINES= 1&times;MASBL+PICTURES
+LSP= 10         **START OF LINE
+LEP= 12         **END OF LINE
+[*LGORR1=]
+[*LGORR0=]
+[*LGORREND=]
+[*LGORR2=]
+[*LIOAMSG&beta;=]
+[*LSW&beta;=]
+[*LENTRY&beta;=]
+[*LXSET&beta;=]
+
+MASBL= 24       **MASTER BLOCK LENGTH
+MOVIT= 10       **HOW TO MOVE COORDINATES
+MASTERS= LIST+1
+MERGERS= 10&times;SMASBL+LIST+1
+MOVINGS= 14&times;SMASBL+LIST+1
+META= 12
+[*MTLOOP&beta;=]
+
+NCON= 17        **# CONSTRAINTS SHOWN
+NLIST= 23000	**MODEL EMPTY LIST STRUCTURE
+
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=87 doc_page=85 type=equalities]
 [Page header: "LMH GX7A 010"]
+
+NUMBERS= 10&times;MASBL+PICTURES
+NTOSHO= 14      ** SCALER TO BE SHOWN
+NVAL= 16        ** R COS &alpha;, R SIN &alpha;, X, Y
+NEWCONS= 16*SMASBL+LIST+1
+NAME= 4
+[*NEWH1=]
+[*NEWH2=]
+[*NTFENTRY&beta;=]
+[*NORMENTRY&beta;=]
+[*NORMEXIT&beta;=]
+[*NTFNDMSG&beta;=]
+[*NENTRY&beta;=]
+
+ORIGIN= 14400
+ONLINES= 12&times;MASBL+PICTURES
+ONCIRCLES= 13&times;MASBL+PICTURES
+
+PICTURES= 22&times;SMASBL+LIST+1
+POINTS= 4&times;MASBL+PICTURES
+PICBLKS= 2      **NON PICTURE STUFF IN PICTURE
+PPART= 4        **PICTURE PARTS
+PPARTM= 10      **MOVING PICTURE PARTS
+PATAP= 12       **ATTACHERS OF THIS PICTURE
+PINS= 14        **INSTANCES OF THIS PICTURE
+PSIZE= 16       **SIZE OF THIS PICTURE
+PNAME= 17       **NAME OF PICTURE, 36 BITS
+PSAVE= 20       **6 REGISTERS TO SAVE IN PICTURE
+PLS= 14 **LINES ND CIRCLES ON THIS POINT
+PVAL= 20        **COORDINATES OF POINT
+PBOCC= 10       **CENTER OF POINT ON CIRCLE
+PBOCS= 12       **START OF POINT ON CIRCLE
+PBOCP= 14       **POINT TO BE ON CIRCLE
+PBOLE= 10       **END POINT OF LINE
+PBOLS= 12       **START OF POINT ON LINE
+PBOLP= 14       **POINT TO BE ON LINE
+PWHOS= 6        **PICTURE IN PICTURES
+
+[*RL= 30000]
+[*RM= RL+100]
+[*REV= 4]
+
+SIZE= 10000	**LETTER SIZE	[had different meaning (and value) in previous program]
+SMASBL= 6       **SMALL MASTER BLOCK LENGTH FOR DESIGNATERS
+S= 7
+SCCEN= 200035
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=88 doc_page=86 type=equalities]
 [Page header: "LMH GX7A 011"]
 
+SCSZ= 200034
+SPECB= 2        **SPECIFIC BLOCKS
+SCALERS= 3&times;MASBL+PICTURES
+SSHOW= 14       **NUMBERS SHOWING THIS SCALER
+SVAL= 16        **VALUE OF THE SCALER
+[*SPD1= 10]
+[*SPD2= 20]
+[*SPD3= 30]
+[*SPD4= 40]
+[*SCHENTRY=]
+[*SCENTRY&beta;=]
+[*SCEBME&beta;=]
+[*SCRAST=]
+[*SCRENTRY=]
+[*SCRM=]
+[*SCRL=]
+[*SCRET=]
+[*SCDATA=]
+[*SCADD=]
+
+TL=-SIZE/2,,SIZE
+TR= SIZE/2,,SIZE
+TA= 16
+T= 10
+TXTS= 20        **POINTER TO TEXT SHOWN
+TUPLE= 14       **# VARIABLES
+TEXTS= 7&times;MASBL+PICTURES
+TYPE= 0         **TIES TO SPECB IN MASTER BLOCK
+TVAL= 14        **R COS &alpha;, R SIN &alpha;, X, Y
+TOPOS= 3&times;SMASBL+LIST+1
+TPVAL= 14       **X,Y LOCATION
+TPVALS= 5&times;MASBL+PICTURES  **TYPICAL VARIABLES
+TX2NAME= 372023
+TX2IK={ TX2NAME,,BLOCK MARK,7}
+TX2TOG= 377727
+[*TAPEK4= 20000]
+[*TAPEK3= 3000]
+[*TAPEK2= 1500]
+[*TAPEK1= 300]
+[*TAFREVDIR=]
+[*TAFDKF=]
+[*TAFSCHK=]
+[*TAFST=]
+[*TAFSPDK=]
+[*TAFIOS=]
+[*TAFBL=]
+[*TAFWA1=]
+
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=89 doc_page=87 type=equalities]
 [Page header: "LMH GX7A 012"]
 
+[*TAFNOTREADY=]
+[*TAFIOASTART&beta;=]
+[*TAFIOAIOS&beta;=]
+[*TYPEXIT&beta;=]
+[*TYPECNTR&beta;=]
+[*TYPELOOP&beta;=]
+[*TAF0R=]
+[*TAF0F=]
+[*TAFGOFWD=]
+[*TAF3R=]
+[*TAF4F=]
+[*TAF4R=]
+[*TAFSTK=]
+[*TAF0F&Delta;=]
+[*TAFCON=]
+[*TAFREV=]
+[*TAFFOR=]
+[*TAFIOSRET=]
+[*TAF1F=]
+[*TAF2F=]
+[*TAF3F=]
+[*TAFNEGMK=]
+[*TAFLVREV=]
+[*TAFREVSW=]
+[*TAFCOMP=]
+[*TAFERRSW=]
+[*TAFERR=]
+[*TAFERREXIT=]
+[*TAFDKR=]
+[*TAF2R=]
+[*TAF1R=]
+
+VARLOC= 15      **LOCATION OF VARIABLES IN BLOCK
+VORD= 6		**ORDERING OF VARIABLES
+VFLW= 10        **CONSTRAINTS WHICH THIS VARIABLE IS TO SATISFY
+VCON= 12        **CONSTRAINTS ON THIS VARIABLE
+VARIABLES= 1&times;SMASBL+LIST+1
+
+WORKS= 7&times;SMASBL+LIST+1
+WHERE= 12       **LOCATION OF THING IN PICTURE
+
+[*WRSP&beta;=]
+[*WRENTRY=]
+[*WRLD=]
+[*WRESW=]
+[*WRELOOP=]
+[*WRLBM=]
+
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=90 doc_page=88 type=equalities]
 [Page header: "LMH GX7A 013"]
+
+[*WRSC=]
+[*WRMAINLOOP=]
+[*WRCONT=]
+[*WRSPL=]
+
+[*XXX= 0]
+[*XCHKSW=]
+[*XXX&beta;= 0]
+[*XSETK&beta;=]
+[*XSET&beta;=]
+[*XCHK=]
+
+&gamma;= 3
+
+?=#		[creative, explains "JPQ ?" (and similar) below]
+
+&alpha;= 1
+
+&epsilon;= 5
+
+&beta;= 2
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=91 doc_page=89 type=macros]
@@ -4084,7 +4386,7 @@ LSW&beta;&rarr;		SKZ<sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub>
 		CAB #-1*
 		<sup>3</sup>TSD A
 TYPECNTR&beta;&rarr;	h<sup>1</sup>JNX<sub>X</sub><sub>X</sub><sub>X</sub><sub>&beta;</sub>TYPELOOP&beta;
-TYPEEXIT&beta;&rarr;	JPQ XXX&beta;
+TYPEXIT&beta;&rarr;	JPQ XXX&beta;
 &#9755;&#9755;EMD
 
 &#9755;&#9755;DEF TPK&beta;
