--- a/sk.html
+++ b/sk.html
@@ -44,7 +44,7 @@ DISPLAYK= 2
 DISPLAY = 5	**MASTER DISPLAY SUBROUTINE
 DESIGS= 13*SMASBL+LIST+1
 
-ERRORSTOP=SKM <sub>4</sub>sbo<sub>1</sub><sub>0</sub> 377730
+ERRORSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377730
 
 FREES= 5&times;SMASBL+LIST+1
 FREEDOMS= 6&times;SMASBL+LIST+1
@@ -276,7 +276,7 @@ DISPLAYK= 2
 DISPLAY = 5     **MASTER DISPLAY SUBROUTINE
 DESIGS= 13*SMASBL+LIST+1
 
-ERRORSTOP=SKM <sub>4</sub>sbo<sub>1</sub><sub>0</sub> 377730
+ERRORSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377730
 
 FREES= 5&times;SMASBL+LIST+1
 FREEDOMS= 6&times;SMASBL+LIST+1
@@ -2838,11 +2838,11 @@ DEGEN=hJMP DEGEN1
 DESIGS= 13*SMASBL+LIST+1
 
 [Previous defs of ERRORSTOP have 377730 as last arg]
-ERRORSTOP=SKM <sub>4</sub>sbo<sub>1</sub><sub>0</sub> 377731
-EXPINS=SKM <sub>4</sub>sbo<sub>1</sub><sub>0</sub> EXPAIRTS	**EXPANDING INSTANCE
+ERRORSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377731
+EXPINS=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> EXPAIRTS	**EXPANDING INSTANCE
 
 FREES= 5&times;SMASBL+LIST+1
-FIX=SKM <sub>4</sub>sbo<sub>1</sub><sub>0</sub> 377720
+FIX=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377720
 FIXSAP= 200064
 
 <hr>
@@ -6023,7 +6023,7 @@ TX2MSW&rarr;		SKN <sub>M</sub><sub>E</sub><sub>T</sub><sub>A</sub>#
 		<sup>1</sup>COM 45WA
 		<sup>1</sup>TSD 45WA	**SUMCHK
 		<sup>1</sup>IOS <sub>5</sub><sub>4</sub> 30000
-		h45WCS [syntax, 45WCS is listed without a value in the equalities table]
+		h45WCS
 		SKZ <sub>1</sub><sub>.</sub><sub>9</sub> E	**NOT EOT?
 		hJPQ 45ERR
 		45DELAY&equiv;3516.
@@ -6445,9 +6445,77 @@ LAST&rarr;		ZZLAST
 [meta file_name=102726903-05-01-acc.pdf pdf_page=138 doc_page=136 type=equalities]
 [Page header: "IES BOO7 003"]
 
+BADOV= 200100
+
+CONSTK= 3
+CONSTRAINTS= 4&times;SMASBL+LIST+1
+CVTS= 6         **VARIABLE TO MOVE TO SATISFY THIS
+CCFR= LIST-2
+
+DEGEN=hJMP DEGEN1
+DISPLAY= 5      **MASTER DISPLAY SUBROUTINE
+
+[*EITH3=]
+[*EITH1=]
+[*EITH=]
+[*EITH2=]
+
+FIX=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377722
+
+IPCONS= 11&times;MASBL+PICTURES	**INSTANCE-POINT CONSTRAINT
+IVAL= 20        **R COS &alpha;, R SIN &alpha;, X, Y
+IWHAT= 14       **WHAT PIC THIS IS INSTANCE OF
+
+INCH=(2,)/(29.)
+
+LIST= 24000     **LIST STRUCTURE START
+
+MASBL= 24       **MASTER BLOCK LENGTH
+
+NLIST= 22000    **MODEL EMPTY LIST STRUCTURE
+NUMRAT=(-(h)/6)	[syntax]
+
+ONCIRCLES= 13&times;MASBL+PICTURES
+ONLINES= 12&times;MASBL+PICTURES
+ORIGIN= 20400
+
+PICTURES= 22&times;SMASBL+LIST+1
+PVAL= 20        **COORDINATES OF POINT
+PSIZE= 16       **SIZE OF THIS PICTURE
+PYTHAGORIAN= 200007
+
+SMASBL= 6       **SMALL MASTER BLOCK LENGTH FOR DESIGNATERS
+S= 7
+SVAL= 16        **VALUE OF SCALER
+SPECB= 2        **SPECIFIC BLOCKS
+[*SUBR1=]
+
+TPVALS= 5&times;MASBL+PICTURES  **TYPICAL VARIABLES
+
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=139 doc_page=137 type=equalities]
 [Page header: "IES BOO7 004"]
+
+TYPE= 0         **TIES TO SPECB IN MASTER BLOCK
+T= 10
+
+VA= LIST+PVAL
+VARLOC= 15      **LOCATION OF VARIABLES IN BLOCK
+VARIABLES= 1&times;SMASBL+LIST+1
+
+WHERE= 12       **LOCATION OF THING IN PICTURE
+
+&gamma;= 3
+
+&alpha;= 1
+
+&Delta;= 4
+
+&epsilon;= 5
+
+&beta;= 2
+
+&lambda;= 6
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=140 doc_page=138 type=macros]
