Fix a type in symex definition.

--- a/sk.html
+++ b/sk.html
@@ -2797,7 +2797,7 @@ LAST&rarr;		ZZLAST
 [Page header: "IES OPLW 004"]
 
 ARCTAN=hJPQ CACT
-AFAN= LIST+CVAL<sub>&alpha;</sub>
+AFANG= LIST+CVAL<sub>&alpha;</sub>
 AFFB= LIST
 AFST= CMSTART
 AFCEN= CMCEN
