Another equalities table, pretty much an exact copy of the previous one.

--- a/sk2.html
+++ b/sk2.html
@@ -328,25 +328,248 @@ LAST&rarr;		ZZLAST	[guessing the label, line damaged]
 [meta file_name=102726903-05-02-acc.pdf pdf_page=11 doc_page=161 type=equalities]
 [Page header: "IES ONLW 004"]
 
+ARCTAN=hJPQ CACT
+AFANG= LIST+CVAL<sub>&alpha;</sub>
+AFFB= LIST
+AFST= CMSTART
+AFCEN= CMCEN
+ATATAP= 2       **ATTACHER THING
+
+BASICFILE= 200033
+BWHOS= 4        **TO WHICH PICTURE BLOCK BELONGS
+BLOCKMAKER= 200052
+
+CACT= 200007+1
+CVAL= 16        **CIRCLE ANGLE AND RADIUS
+CMSTART= 200022
+CMCEN= 200024
+CIRCEN= 14      **CIRCLE CENTER
+CSQ=RFD #+1
+CSP= 10         **CIRCLE START POINT
+CEP= 12         **CIRCLE END POINT
+CMANG= 200026
+CIRCLES= 2&times;MASBL+PICTURES
+CMAG= 200021
+CMNAME= 200020+10
+CPNAME= 200054
+CONSTK= 3
+CVTS= 6         **VARIABLE TO MOVE TO SATISFY THIS
+CONLET= 12      **CONSTRAINT LETTER CODE
+CHVAR= 20       **# CHANGABLE VARIABLES
+COMP= 16        **CONSTRAINT COMPUTATION ROUTINE
+CURPICS= 15&times;SMASBL+LIST+1
+CONSTRAINTS= 4&times;SMASBL+LIST+1
+CCFR= LIST-2
+
+DRAWASFIX=SKM <sub>4</sub><sub>.</sub><sub>9</sub> 377720
+DISPLAY= 5      **MASTER DISPLAY SUBROUTINE
+DEADS= 11&times;SMASBL+LIST+1
+DISPLAYK= 2	[line damaged, guessing that it's DISPLAYK based on previous equalities table]
+DEGEN=hJMP DEGEN1
+DESIGS= 13*SMASBL+LIST+1
+
+ERRORSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377731 [line damaged, guessing ERRORSTOP]
+EXPINS=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> EXPAIRTS      **EXPANDING INSTANCE
+
+FREES= 5&times;SMASBL+LIST+1
+FIX=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377720
+FIXSAP= 200064
+
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=12 doc_page=162 type=equalities]
 [Page header: "IES ONLW 005"]
+
+FREEDOMS= 6&times;SMASBL+LIST+1
+FIXEDS= 12&times;SMASBL+LIST+1
+
+GETIT= 7        **MASTER FORMATION SUBROUTINE
+
+[*GORREXIT= 0]
+
+HOWBIG= 6       **MASTER SCSZ COMPUTATION
+HOVS= 15&times;MASBL+PICTURES
+HOVP1= 10       **FIRST HORIZ OR VERT POINT
+HOVP2= 12       **SECOND HO1IZ OR VERT POINT    [sic, HORIZ]
+HOVCODE= 14     **HORIZ=1, VERTICAL=2, EITHER=0
+HOLDERS= 2&times;SMASBL+LIST+1
+
+IWHAT= 14       **WHAT PIC THIS IS INSTANCE OF
+INSTANCES= 6&times;MASBL+PICTURES
+ISIZE= 16       ** R
+IPCONS= 11&times;MASBL+PICTURES
+IPCP= 10        **POINT IN INSTANCE-POINT CONSTRAINT
+IPCI= 12        **INSTANCE IN INSTANCE-POINT CONSTRAINT
+IPCV= 14        **VIRGIN POINT IN INSTANCE-POINT CONSTRAINT
+IP= LIST+IVAL+2
+IVAL= 20        **R COS &alpha;, R SIN &alpha;, X, Y
+IBVERTS= 14&times;MASBL+PICTURES
+IPCOTP= 16      **INSTANCE-POINT CONSTRAINTS WITH THIS VIRGIN
+IBVW= 10        **WHICH INSTANCE IS VERTICAL
+IBVCODE= 12     **INSTANCE TO BE VERTICAL, HORIZ, ETC
+
+JUNKK= 3
+
+KIND= 13        **1=NOT IN PIC, 2=PPART, 3=PICBLKS
+
+LIST= 24000     **LIST STRUCTURE START
+LSP= 10         **START OF LINE
+LEP= 12         **END OF LINE
+LINES= 1&times;MASBL+PICTURES
+LMSTART= 200022
+LMEND= 200024
+LMNAME= 200030
 
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=13 doc_page=163 type=equalities]
 [Page header: "IES ONLW 006"]
 
+LMAG= 200020
+LETMAG= 200015
+[*LGORR1=]
+[*LGORR0=]
+[*LGORREND=]
+[*LGORR2=]
+
+MASBL= 24       **MASTER BLOCK LENGTH
+MOVED=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> SCSZ
+MOVINGDONE=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200061
+MOVIT= 10       **HOW TO MOVE COORDINATES
+MASTERS= LIST+1
+MERGERS= 10&times;SMASBL+LIST+1
+MOVINGS= 14&times;SMASBL+LIST+1
+
+NDISP= 200031
+NUMBERS= 10&times;MASBL+PICTURES
+NLIST= 22000
+NVAL= 16        ** R COS &alpha;, R SIN &alpha;, X, Y
+NTOSHO= 14      ** SCALER TO BE SHOWN
+NCON= 17        **# CONSTRAINTS SHOWN
+NEWCONS= 16*SMASBL+LIST+1
+NAME= 4         **NAME OF HEADER BLOCKS
+ONCIRCLES= 13&times;MASBL+PICTURES
+ORIGIN= 204400
+OVERFLOWSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377731
+ONLINES= 12&times;MASBL+PICTURES
+
+PICTURES= 22&times;SMASBL+LIST+1
+PLS= 14 **LINES ND CIRCLES ON THIS POINT
+PVAL= 20        **COORDINATES OF POINT
+POINTS= 4&times;MASBL+PICTURES
+PSPL= 200042
+PNAME= 17       **NAME OF PICTURE, 36 BITS
+PSIZE= 16       **SIZE OF THIS PICTURE
+PPART= 4        **PICTURE PARTS
+PINS= 14        **INSTANCES OF THIS PICTURE
+PICCHANGE=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> CPNAME
+PSNEED=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200041
+PYTHAGORIAN= 200007
+PSEUDO= 200041
+PMAG= 200017
+PPARTM= 10      **MOVING PICTURE PARTS
+PLOTIT=SKM <sub>4</sub><sub>.</sub><sub>8</sub> 377621
+PLCLEAN= 200130
+PLPUNCH= 200132
+PLEND= 200133
+PUNCHIT=SKM <sub>4</sub><sub>.</sub><sub>7</sub> 377621
+
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=14 doc_page=164 type=equalities]
 [Page header: "IES ONLW 007"]
+
+PLPUBUSY=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200132
+PLOTNOSCOPE=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200130
+PLPLOT= 200131
+PLPLBUSY=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200131
+PSAVE= 20       **6 REGISTERS TO SAVE IN PICTURE
+PICBLKS= 2      **NON PICTURE STUFF IN PICTURE
+PLOTBLOCKS= 200136
+PLOTSTORAGE= 200137
+PICTUREK= 1
+PATAP= 12       **ATTACHERS OF THIS PICTURE
+PBOCC= 10       **CENTER OF POINT ON CIRCLE
+PBOCS= 12       **START OF POINT ON CIRCLE
+PBOCP= 14       **POINT TO BE ON CIRCLE
+PBOLE= 10       **END POINT OF LINE
+PBOLS= 12       **START OF POINT ON LINE
+PBOLP= 14       **POINT TO BE ON LINE
+PWHOS= 6        **PICTURE IN PICTURES
+
+RELAX= 200060
+READIT= 200066
+
+SMASBL= 6       **SMALL MASTER BLOCK LENGTH FOR DESIGNATERS
+SCSZ= 200034
+SQRT=hJPQ 200006
+SNDISP= 200032
+SCCEN= 200035
+S= 7
+SPECB= 2        **SPECIFIC BLOCKS
+SCALERS= 3&times;MASBL+PICTURES
+SPLAT=#-NLIST,,#-NLIST
+SVAL= 16        **VALUE OF THE SCALER
+SSHOW= 14       **NUMBERS SHOWING THIS SCALER
+[377725 is defined as SHOWTOG below]
+SHOWBLKS=SKM <sub>4</sub><sub>.</sub><sub>9</sub> 377725     **SHOW NON DRAW JUNK
+SHOWCON=SKM <sub>4</sub><sub>.</sub><sub>8</sub> 377725      **SHOW CONSTRAINTS
+SHOWPOINTS=SKM <sub>4</sub><sub>.</sub><sub>7</sub> 377725   **SHOW POINTS
+SHOWINSASBOX=SKM <sub>4</sub><sub>.</sub><sub>6</sub> 377725 **ENBOX INSTANCES
+SUPPLINES=SKM <sub>4</sub><sub>.</sub><sub>4</sub> 377725    **DON'T SHOW LINES AND CIRCLES
+SUPPINS=SKM <sub>4</sub><sub>.</sub><sub>5</sub> 377725      **DON'T EXPAND INSTANCES
+SIZE= 11        **SIZE OF BLOCK
 
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=15 doc_page=165 type=equalities]
 [Page header: "IES ONLW 010"]
 
+SPLATT=#-NLIST-SMASBL,,#+SMASBL-NLIST
+SPLATTT=#-NLIST-MASBL,,#-NLIST+MASBL
+SUPPNUMS=SKM <sub>4</sub><sub>.</sub><sub>2</sub> SHOWTOG
+SHOWTOG= 377725
+SUPPTEXTS=SKM <sub>4</sub><sub>.</sub><sub>3</sub> SHOWTOG
+SHOWSCALERS=SKM <sub>4</sub><sub>.</sub><sub>1</sub> SHOWTOG
+SHOWTPVALS=SKM <sub>3</sub><sub>.</sub><sub>9</sub> SHOWTOG
+[*SUBR1=]
+
+TYPE= 0         **TIES TO SPECB IN MASTER BLOCK
+T= 10
+TEXTS= 7&times;MASBL+PICTURES
+TVAL= 14        **R COS &alpha;, R SIN &alpha;, X, Y
+TXTS= 20        **POINTER TO TEXT SHOWN
+TUPLE= 14       **# VARIABLES
+TEXTCNG= 200077
+TPVAL= 14       **X,Y LOCATION
+TOPOS= 3&times;SMASBL+LIST+1
+TPVALS= 5&times;MASBL+PICTURES  **TYPICAL VARIABLES
+[*T1=]
+[*T2=]
+
+UNIVBH= SMASBL,4,,MASTERS-LIST
+
+VCON= 12        **CONSTRAINTS ON THIS VARIABLE
+VA= LIST+PVAL
+VORD= 6         **ORDERING OF VARIABLES
+VFLW= 10        **CONSTRAINTS WHICH THIS VARIABLE IS TO SATISFY
+VARLOC= 15      **LOCATION OF VARIABLES IN BLOCK
+VARIABLES= 1&times;SMASBL+LIST+1
+
+WORKS= 7&times;SMASBL+LIST+1
+WHERE= 12       **LOCATION OF THING IN PICTURE
+
+&gamma;= 3
+
+&alpha;= 1
+
+&Delta;= 4
+&Delta;SIZE= 200055     **KNOB CHANGE
+&Delta;ROT= 200056      **KNOB CHANGE
+
+&beta;= 2
+
+[Problem: page with header "IES ONLW 011" is missing]
+
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=16 doc_page=166 type=macros]
-[Page header: "IES ONLW 012", out of sequence - "011" is missing]
+[Page header: "IES ONLW 012"]
 [This macros block (doc_pages 166-171) appears to be exactly identical to one on doc_pages 67-72]
 
 &#9755;&#9755;DEF MOVE|A&rarr;B
