Another equalities table.

--- a/sk2.html
+++ b/sk2.html
@@ -3471,23 +3471,207 @@ LAST&rarr;		ZZLAST
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=82 doc_page=232 type=equalities]
 [Page header: "HHL LYUO 004"]
-[Looks like equalities pages contain quite a lot of comments, may be useful]
+
+47LITEIT= 200050
+47LOSTPEN= 200051
+
+ATPOINT=SKM <sub>3</sub><sub>.</sub><sub>2</sub> 200044
+ATLINE=SKM <sub>3</sub><sub>.</sub><sub>3</sub> 200044
+ATCIRCLE=SKM <sub>3</sub><sub>.</sub><sub>4</sub> 200044
+ARCTAN=hJPQ CACT
+ATILL=SKM <sub>3</sub><sub>.</sub><sub>5</sub> 200044
+ATICL=SKM <sub>3</sub><sub>.</sub><sub>6</sub> 200044
+ATICC=SKM <sub>3</sub><sub>.</sub><sub>7</sub> 200044
+ATBITS=200044
+ATINS=SKM <sub>3</sub><sub>.</sub><sub>8</sub> ATBITS
+ATATAP= 2       **ATTACHER THING
+
+BASICFILE= 200033
+BADOV= 200100
+BWHOS= 4        **TO WHICH PICTURE BLOCK BELONGS
+
+CACT= 200007+1
+CVAL= 16        **CIRCLE ANGLE AND RADIUS
+CSQ=RFD #+1
+CIRCEN= 14      **CIRCLE CENTER
+CSP= 10         **CIRCLE START POINT
+CEP= 12         **CIRCLE END POINT
+CIRCLES= 2&times;MASBL+PICTURES
+CVTS= 6         **VARIABLE TO MOVE TO SATISFY THIS
+CHVAR= 20       **# CHANGABLE VARIABLES
+COMP= 16        **CONSTRAINT COMPUTATION ROUTINE
+CURPICS= 15&times;SMASBL+LIST+1
+CONSTRAINTS= 4&times;SMASBL+LIST+1
+CONLET= 12      **CONSTRAINT LETTER CODE
+
+DISPLAY FILE= 100000
+DEADS= 11&times;SMASBL+LIST+1
+DISPLAY= 5      **MASTER DISPLAY SUBROUTINE
+DESIGS= 13*SMASBL+LIST+1
+
+ERRORSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377730
+
+FREES= 5&times;SMASBL+LIST+1
+FREEDOMS= 6&times;SMASBL+LIST+1
+FIXEDS= 12&times;SMASBL+LIST+1
+
+GETIT= 7        **MASTER FORMATION SUBROUTINE
+
+HOVS= 15&times;MASBL+PICTURES
 
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=83 doc_page=233 type=equalities]
 [Page header: "HHL LYUO 005"]
 
+HOWBIG= 6       **MASTER SCSZ COMPUTATION
+HOVP1= 10       **FIRST HORIZ OR VERT POINT
+HOVP2= 12       **SECOND HO1IZ OR VERT POINT    [sic, HORIZ]
+HOVCODE= 14     **HORIZ=1, VERTICAL=2, EITHER=0
+HOLDERS= 2&times;SMASBL+LIST+1
+
+IWHAT= 14       **WHAT PIC THIS IS INSTANCE OF
+IWHOS= 10	**INSTANCE IN WHAT
+INSTANCES= 6&times;MASBL+PICTURES
+IPOS= IROT+2
+IROT= 16
+IN&alpha;= 32
+IN&beta;= 33
+IPCONS= 11&times;MASBL+PICTURES
+ICON= 10
+IPCP= 10        **POINT IN INSTANCE-POINT CONSTRAINT
+
+INTSTART= 200135
+IBVERTS= 14&times;MASBL+PICTURES
+IPCOTP= 16      **INSTANCE-POINT CONSTRAINTS WITH THIS VIRGIN
+ISIZE= 16       ** R
+IVAL= 20        **R COS &alpha;, R SIN &alpha;, X, Y
+IBVW= 10        **WHICH INSTANCE IS VERTICAL
+IPCI= 12        **INSTANCE IN INSTANCE-POINT CONSTRAINT
+IPCV= 14        **VIRGIN POINT IN INSTANCE-POINT CONSTRAINT
+IBVCODE= 12     **INSTANCE TO BE VERTICAL, HORIZ, ETC
+
+KIND= 13        **1=NOT IN PIC, 2=PPART, 3=PICBLKS
+
+LIST= 24000     **LIST STRUCTURE START
+LSP= 10         **START OF LINE
+LEP= 12         **END OF LINE
+LPLOST=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200042
+LPSEESIZE= 5
+LINES= 1&times;MASBL+PICTURES
+LP&alpha;= 23
+
+MASBL= 24       **MASTER BLOCK LENGTH
+MOVED=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200034
+MASTERS= LIST+1
+
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=84 doc_page=234 type=equalities]
 [Page header: "HHL LYUO 006"]
+
+MERGERS= 10&times;SMASBL+LIST+1
+MOVIT= 10       **HOW TO MOVE COORDINATES
+MOVINGS= 14&times;SMASBL+LIST+1
+
+NP&alpha;= IN&alpha;
+NP&beta;= IN&beta;
+NUMBERS= 10&times;MASBL+PICTURES
+NCON= 17        **# CONSTRAINTS SHOWN
+NTOSHO= 14      ** SCALER TO BE SHOWN
+NVAL= 16        ** R COS &alpha;, R SIN &alpha;, X, Y
+NLIST= 23000    **MODEL EMPTY LIST STRUCTURE
+NEWCONS= 16*SMASBL+LIST+1
+NAME= 4         **NAME OF HEADER BLOCKS
+
+ORIGIN= 1000
+ONLINES= 12&times;MASBL+PICTURES
+ONCIRCLES= 13&times;MASBL+PICTURES
+
+PICTURES= 22&times;SMASBL+LIST+1
+PVAL= 20        **COORDINATES OF POINT
+PENSEESIZE= 5
+POINTS= 4&times;MASBL+PICTURES
+PICNUM= 377724	**#OF PICTURE YOU WANT
+PICCHANGE=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> CPNAME
+PSNEED=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200041
+PSNPS= 740
+PYTHAGORIAN= 200007
+PENLSIZE= 6000
+PENDSIZE= 10000
+PS&alpha;= 5
+PS&Delta;= 4
+PS&gamma;= 3
+PS&beta;= 2
+PENISIZE= 5000
+PICBLKS= 2      **NON PICTURE STUFF IN PICTURE
+PPART= 4        **PICTURE PARTS
+PPARTM= 10      **MOVING PICTURE PARTS
+PATAP= 12       **ATTACHERS OF THIS PICTURE
+PINS= 14        **INSTANCES OF THIS PICTURE
+PSIZE= 16       **SIZE OF THIS PICTURE
+PNAME= 17       **NAME OF PICTURE, 36 BITS
+PSAVE= 20       **6 REGISTERS TO SAVE IN PICTURE
+PLS= 14 		**LINES ND CIRCLES ON THIS POINT
+PBOCC= 10       **CENTER OF POINT ON CIRCLE
 
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=85 doc_page=235 type=equalities]
 [Page header: "HHL LYUO 007"]
 
+PBOCS= 12       **START OF POINT ON CIRCLE
+PBOCP= 14       **POINT TO BE ON CIRCLE
+PBOLE= 10       **END POINT OF LINE
+PBOLS= 12       **START OF POINT ON LINE
+PBOLP= 14       **POINT TO BE ON LINE
+PWHOS= 6        **PICTURE IN PICTURES
+
+SMASBL= 6       **SMALL MASTER BLOCK LENGTH FOR DESIGNATERS
+SCSZ= 200034
+SQRT=hJPQ 200006
+SHAFT= 377620
+SQ60A= 200004
+SCCEN= 200035
+S1&alpha;= 34
+SNDISP= 200032
+SCALERS= 3&times;MASBL+PICTURES
+S= 7
+SIZE= 11        **SIZE OF BLOCK
+SSHOW= 14       **NUMBERS SHOWING THIS SCALER
+SVAL= 16        **VALUE OF THE SCALER
+SPECB= 2        **SPECIFIC BLOCKS
+SHAFTUSE=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> &Delta;SIZE
+
+TIME= 10000.
+TRBUSY=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200134
+TRRADIUS= 4000
+TYPE= 0         **TIES TO SPECB IN MASTER BLOCK
+TR&alpha;= 24
+TR&beta;= 25
+TEXTS= 7&times;MASBL+PICTURES
+TUPLE= 14       **# VARIABLES
+TVAL= 14        **R COS &alpha;, R SIN &alpha;, X, Y
+TXTS= 20        **POINTER TO TEXT SHOWN
+TOPOS= 3&times;SMASBL+LIST+1
+TPVAL= 14       **X,Y LOCATION
+TPVALS= 5&times;MASBL+PICTURES  **TYPICAL VARIABLES
+[*T2=]
+[*T1= 1]
+
+VA= LIST+PVAL
+VCON= 12        **CONSTRAINTS ON THIS VARIABLE
+VARLOC= 15      **LOCATION OF VARIABLES IN BLOCK
+VORD= 6         **ORDERING OF VARIABLES
+VFLW= 10        **CONSTRAINTS WHICH THIS VARIABLE IS TO SATISFY
+
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=86 doc_page=236 type=equalities]
 [Page header: "HHL LYUO 010"]
+
+VARIABLES= 1&times;SMASBL+LIST+1
+
+WORKS= 7&times;SMASBL+LIST+1
+WHERE= 12       **LOCATION OF THING IN PICTURE
+
+&alpha;= 1
 
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=87 doc_page=237 type=macros]
