--- a/sk2.html
+++ b/sk2.html
@@ -5021,9 +5021,105 @@ LAST&rarr;		ZZLAST
 [meta file_name=102726903-05-02-acc.pdf pdf_page=116 doc_page=266 type=equalities]
 [Page header: "LMH Y3HT 004"]
 
+ARCTAN=hJPQ CACT
+
+BSFAC= 7
+BADOV= 200100
+
+CSQ=RFD #+1
+CMSSCSZ= 374000
+CMSTART= 200022
+CMCEN= 200024
+CMMINRAD= 100,,
+CMMINSTEP= 0
+CMNAME= 200030
+CM&alpha;= 32
+CM&beta;= 33
+CMMASK= 177772
+
+DISPLAY FILE= 100000
+DISPLAYFILESIZE= 177000-DISPLAY FILE
+
+ERRORSTOP=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377730
+
+FRESH START= 200002
+
+INTERLACE=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377724
+
+LACE= 10
+LMINC= CMFAC
+
+PI= 311037,,123103	**PI/4
+PLS= 70
+PLESW=SKM <sub>1</sub><sub>.</sub><sub>5</sub> PLSW
+PLTABLE= 177700
+PLCSW=SKM <sub>1</sub><sub>.</sub><sub>7</sub> PLSW
+PL1PSW=SKM <sub>1</sub><sub>.</sub><sub>9</sub> PLSW
+PLUSW=SKM <sub>1</sub><sub>.</sub><sub>1</sub> PLSW
+PLPUBUSY=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> PLPUNCHJMP
+PLLSW=SKM <sub>1</sub><sub>.</sub><sub>6</sub> PLSW
+PLU= 64
+PLEADER={ 48.,51.,,73,0}
+PLP= 73
+PLPLBUSY=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> PLPLOTJMP
+PLPSW=SKM <sub>1</sub><sub>.</sub><sub>2</sub> PLSW
+PL1TSW=SKM <sub>1</sub><sub>.</sub><sub>8</sub> PLSW
+PLLK1= 100000/729.
+PLLK2= 100000/243.-PLLK1
+PLLK3= 100000/81.-(PLLK1+PLLK2)
+PLLK4= 100000/27.-(PLLK1+PLLK2+PLLK3)
+PLLK5= 100000/9.-(PLLK1+PLLK2+PLLK3+PLLK4)
+PLLK6= 100000/3-(PLLK1+PLLK2+PLLK3+PLLK4+PLLK5)
+
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=117 doc_page=267 type=equalities]
 [Page header: "LMH Y3HT 005"]
+
+PLCK1= PLLK1&times;PLCRATIO/10.
+PLCRATIO= 5
+PLCK2= PLLK2&times;PLCRATIO/10.
+PLCK3= PLLK3&times;PLCRATIO/10.
+PLCK4= PLLK4&times;PLCRATIO/10.
+PLCK5= PLLK5&times;PLCRATIO/10.
+PLCK6= PLLK6&times;PLCRATIO/10.
+PLCAK1= 377777777777/8.
+PLCAK2= 3&times;PLCAK1-PLCAK1
+PLCAK3= 5&times;PLCAK1-(PLCAK1+PLCAK2)
+PLCAK4= 7&times;PLCAK1-(PLCAK1+PLCAK2+PLCAK3)
+PLOTIT=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> PLCLEANJMP
+PLTABLELENGTH= 200000-PLTABLE
+PLLOWFILTER= 4
+PBIK= 100.
+PBIK4= 13.
+PBIK5= 38.
+PBIK6= 113.
+PLFC= 377777777777
+PLITK={ 10000.,,(176000.-30./20.)}
+PLPK= 40
+PMAGPOINT= LMSTART
+PMAGNAME= LMNAME
+
+RINTERLACE=SKM <sub>4</sub><sub>.</sub><sub>9</sub> 377724
+
+S1&alpha;= 34
+S1&beta;= 35
+S1x= 36
+S1y= 37
+SQ60SEE= 200005
+STARTS= 200003
+SQRT=hJPQ SQUARE ROOT BY HPP
+SC&alpha;= 43
+SC&beta;= 44
+STOPIFFULL=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 377732
+
+TWINKLE=SKM <sub>4</sub><sub>.</sub><sub>9</sub> 377724
+TRACK= PLENDJMP+1*
+TRBUSY=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> PLENDJMP+1
+[*T1= 1]
+
+&alpha;= S1&alpha;
+
+&beta;= S1&beta;
 
 <hr>
 [meta file_name=102726903-05-02-acc.pdf pdf_page=118 doc_page=268 type=macros]
