Start of proofreading pass.

--- a/sk.html
+++ b/sk.html
@@ -1,11 +1,11 @@
 <html><body style='font-size:150%'><pre><code>
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=1 doc_page=0 type=cover]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=1 doc_page=0 type=cover proof=1]
 [Handwritten: "SKETCHPAD LISTINGS"]
 [Handwritten: "IVAN G. SUTHERLAND"]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=2 doc_page=1 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=2 doc_page=1 type=equalities proof=1]
 [Handwritten: "EQUALITIES"]
 [Page header: "FRE SRV7 005"]
 [Judging by page headers, this equalities table is not attached to any program, so may not be useful]
@@ -58,7 +58,7 @@ GETIT= 7		**MASTER FORMATION SUBROUTINE
 HOVP2= 12	**SECOND HO1IZ OR VERT POINT	[sic, HORIZ]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=3 doc_page=2 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=3 doc_page=2 type=equalities proof=1]
 [Page header: "FRE SRV7 006"]
 
 HOVP1= 10	**FIRST HORIZ OR VERT POINT
@@ -103,7 +103,7 @@ MASTERS= LIST+1
 MERGERS= 10&times;SMASBL+LIST+1
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=4 doc_page=3 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=4 doc_page=3 type=equalities proof=1]
 [Page header: "FRE SRV7 007"]
 
 META= 12
@@ -128,7 +128,7 @@ NAME= 4		**NAME OF HEADER BLOCKS
 NEWCONTOG= 377725
 
 ONCIRCLES= 13&times;MASBL+PICTURES
-[Every main block terminates with ORIGIN| address label]
+[Every main block terminates with ORIGIN| address label, value varies between programs]
 ORIGIN= 4000
 ONLINES= 12&times;MASBL+PICTURES
 ORDISW=SKM <sub>1</sub><sub>.</sub><sub>1</sub> ORDSWITCHES
@@ -136,7 +136,7 @@ ORDWORST=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> ORDSTARTW
 ORDC2= ORDCALCEXIT
 
 PICTURES= 22&times;SMASBL+LIST+1
-PLS= 14		**LINES ND CIRCLES ON THIS POINT
+PLS= 14		**LINES ND CIRCLES ON THIS POINT	[sic, "AND"?]
 PVAL= 20		**COORDINATES OF POINT
 POINTS= 4&times;MASBL+PICTURES
 PSPL= 200042
@@ -151,7 +151,7 @@ PBOLS= 12	**START OF POINT ON LINE
 PBOCC= 10	**CENTER OF POINT ON CIRCLE
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=5 doc_page=4 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=5 doc_page=4 type=equalities proof=1]
 [Page header: "FRE SRV7 010"]
 
 PBOCS= 12	**START OF POINT ON CIRCLE
@@ -178,7 +178,7 @@ SIZE= 11		**SIZE OF BLOCK
 SCALERS= 3&times;MASBL+PICTURES
 SPECB= 2		**SPECIFIC BLOCKS
 SSHOW= 14	**NUMBERS SHOWING THIS SCALER
-SVAL= 16		**VALUE OF THE SCALER
+SVAL= 16		**VALUE OF SCALER
 SHAFTUSE=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200055
 [*SUBR1=]
 
