--- a/sk.html
+++ b/sk.html
@@ -200,8 +200,8 @@ VCON= 12		**CONSTRAINTS ON THIS VARIABLE
 VFLW= 10		**CONSTRAINTS WHICH THIS VARIABLE IS TO SATISFY
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=6 doc_page=5 type=equalities]
-[Page header: "FRE SRV7 010"]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=6 doc_page=5 type=equalities proof=1]
+[Page header: "FRE SRV7 011"]
 
 VORD= 6		**ORDERING OF VARIABLES
 VA= LIST+PVAL
@@ -226,24 +226,24 @@ WHERE= 12	**LOCATION OF THING IN PICTURE
 &lambda;= 6
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=7 doc_page=6 type=symex]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=7 doc_page=6 type=symex proof=1]
 [Page header: "IES 2XMX 001"]
 [Handwritten: "BUILD"]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=8 doc_page=7 type=symex]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=8 doc_page=7 type=symex proof=1]
 [Page header: "IES 2XMX 002"]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=9 doc_page=8 type=symex]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=9 doc_page=8 type=symex proof=1]
 [Page header: "IES 2XMX 003"]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=10 doc_page=9 type=symex]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=10 doc_page=9 type=symex proof=1]
 [Page header: "IES 2XMX 004"]
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=11 doc_page=10 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=11 doc_page=10 type=equalities proof=1]
 [Page header: "IES 2XMX 005"]
 
 ATPOINT=SKM <sub>3</sub><sub>.</sub><sub>2</sub> 200044
@@ -290,7 +290,7 @@ HOVP1= 10       **FIRST HORIZ OR VERT POINT
 HOVCODE= 14     **HORIZ=1, VERTICAL=2, EITHER=0
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=12 doc_page=11 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=12 doc_page=11 type=equalities proof=1]
 [Page header: "IES 2XMX 006"]
 
 HOVS= 15&times;MASBL+PICTURES
@@ -336,7 +336,7 @@ MATM= MATS+1    **MAIN DIAG OF TRANSFORMATION
 MATS= 200070    **TRANSFORMATION SIZE
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=13 doc_page=11.5 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=13 doc_page=11.5 type=equalities proof=1]
 [Page header: "IES 2XMX 007"]
 
 MATD= MATS+5    **DENOMINATOR OF TRANSFORMATION
@@ -366,7 +366,7 @@ ORDWORST=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> ORDSTARTW
 ORDC2= ORDCALCEXIT
 
 PICTURES= 22&times;SMASBL+LIST+1
-PLS= 14 **LINES ND CIRCLES ON THIS POINT
+PLS= 14 **LINES ND CIRCLES ON THIS POINT 	[sic]
 PVAL= 20        **COORDINATES OF POINT
 POINTS= 4&times;MASBL+PICTURES
 PSPL= 200042
@@ -385,7 +385,7 @@ PBOLP= 14       **POINT TO BE ON LINE
 PSAVE= 20       **6 REGISTERS TO SAVE IN PICTURE
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=14 doc_page=12 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=14 doc_page=12 type=equalities proof=1]
 [Page header: "IES 2XMX 010"]
 
 PICBLKS= 2      **NON PICTURE STUFF IN PICTURE
@@ -407,7 +407,7 @@ SIZE= 11        **SIZE OF BLOCK
 SCALERS= 3&times;MASBL+PICTURES
 SPECB= 2        **SPECIFIC BLOCKS
 SSHOW= 14       **NUMBERS SHOWING THIS SCALER
-SVAL= 16        **VALUE OF THE SCALER
+SVAL= 16        **VALUE OF SCALER
 SHAFTUSE=SKM <sub>4</sub><sub>.</sub><sub>1</sub><sub>0</sub> 200055
 [*SUBR1=]
 
@@ -421,8 +421,8 @@ TOL= 2000
 TPVAL= 14       **X,Y LOCATION
 TPVALS= 5&times;MASBL+PICTURES  **TYPICAL VARIABLES
 TOPOS= 3&times;SMASBL+LIST+1
-[*T1=]
-[*T2=]
+[*T1= 0]
+[*T2= 21]
 
 VCON= 12        **CONSTRAINTS ON THIS VARIABLE
 VFLW= 10        **CONSTRAINTS WHICH THIS VARIABLE IS TO SATISFY
@@ -432,7 +432,7 @@ VARLOC= 15      **LOCATION OF VARIABLES IN BLOCK
 VARIABLES= 1&times;SMASBL+LIST+1
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=15 doc_page=13 type=equalities]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=15 doc_page=13 type=equalities proof=1]
 [Page header: "IES 2XMX 011"]
 
 WORKS= 7&times;SMASBL+LIST+1
