--- a/sk.html
+++ b/sk.html
@@ -457,7 +457,7 @@ x2= 12
 &lambda;= 6
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=16 doc_page=14 type=macros]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=16 doc_page=14 type=macros proof=1]
 [Page header: "IES 2XMX 012"]
 
 &#9755;&#9755;DEF MOVE|A&rarr;B
@@ -481,13 +481,13 @@ RSX<sub>&beta;</sub>*{LIST+A<sub>&beta;</sub>}+(A^(370.))
 &#9755;&#9755;DEF MOVEB|A&times;B&rarr;C&times;D
 T1=A
 T2=C
-SKN <sub>T</sub><sub>1</sub>B
-SUZ <sub>T</sub><sub>2</sub>D
-MKN <sub>T</sub><sub>2</sub>D
+SKN<sub>T</sub><sub>1</sub>B
+SUZ<sub>T</sub><sub>2</sub>D
+MKN<sub>T</sub><sub>2</sub>D
 &#9755;&#9755;EMD
 
 &#9755;&#9755;DEF GORR&equiv;A&times;&alpha;=&beta;&rarr;B&rarr;C
-<sup>1</sup>DPX<sub>&alpha;</sub>T2+1
+DPX<sub>&alpha;</sub>T2+1
 RSX<sub>&alpha;</sub><sub>|</sub><sub>&alpha;</sub>LIST+A+1
 JPQ T3
 T1&rarr;		hLDE<sub>&alpha;</sub>LIST-1
@@ -501,7 +501,7 @@ REX<sub>&beta;</sub>0
 INX<sub>&beta;</sub><sub>|</sub><sub>&alpha;</sub>
 DEX<sub>&beta;</sub>1
 T2&rarr;		JPQ T1
-0 [maybe &alpha;?]
+0
 RSX<sub>&alpha;</sub>#-1
 JPQ C
 &#9755;&#9755;EMD
@@ -511,7 +511,7 @@ hJPQ {ERROR1&equiv;&alpha;&rarr;P}
 &#9755;&#9755;EMD
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=17 doc_page=15 type=macros]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=17 doc_page=15 type=macros proof=1]
 [Page header: "IES 2XMX 013"]
 
 &#9755;&#9755;DEF ERROR1&equiv;&alpha;&rarr;P
@@ -566,7 +566,7 @@ SKX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
 <sup>1</sup><sup>2</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)+1
 
 <hr>
-[meta file_name=102726903-05-01-acc.pdf pdf_page=18 doc_page=16 type=macros]
+[meta file_name=102726903-05-01-acc.pdf pdf_page=18 doc_page=16 type=macros proof=1]
 [Page header: "IES 2XMX 014"]
 
 <sup>2</sup>EXX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST+(M)+1
@@ -602,7 +602,7 @@ SKX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
 	<sup>2</sup>DPX<sub>X</sub><sub>R</sub><sub>|</sub><sub>S</sub>LIST
 	<sup>1</sup>DPX<sub>X</sub><sub>R</sub><sub>|</sub><sub>T</sub>LIST
 <sup>1</sup><sup>1</sup>RSX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>LIST+(M)
-hJPX<sub>S</sub>#+2
+hJPX<sub>S</sub>#+3		[best guess: 3]
 SKX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
 <sup>1</sup>DPX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST-1
 <sup>1</sup><sup>1</sup>AUX<sub>X</sub><sub>R</sub>{(N)+1,,-((N)+1)}
@@ -619,6 +619,7 @@ SKX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
 hJPX<sub>S</sub>#+2
 SKX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub><sub>2</sub>0
 <sup>1</sup>DPX<sub>S</sub><sub>|</sub><sub>X</sub><sub>R</sub>LIST+(N)
+[Problem: possible clipping. PUTR above has similar structure and one extra line.]
 
 <hr>
 [meta file_name=102726903-05-01-acc.pdf pdf_page=19 doc_page=17 type=macros]
